--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,14 @@
             </li>
             <li class="nav-item">
                 <a routerLink="products" class="nav-link" routerLinkActive="active">
-          Products
+         all  Products
         </a>
             </li>
         </ul>
     </div>
 </nav>
+
+<img [src]="imageurl"> hi
 <div class="container">
     <router-outlet></router-outlet>
 </div>
